--- a/LeetDown_M/LeetDown_M.entitlements
+++ b/LeetDown_M/LeetDown_M.entitlements
@@ -14,5 +14,9 @@
 	<true/>
 	<key>com.apple.security.cs.disable-library-validation</key>
 	<true/>
+	<key>com.apple.security.temporary-exception.sbpl</key>
+	<array>
+		<string>(allow network-outbound (literal "/private/var/run/usbmuxd"))</string>
+	</array>
 </dict>
 </plist>
